--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
    <font color=white>
     <h1>Impresso Espresso</h1>
     <ul>
-        <li><a href="Homepage.html">Home Page</a>
-        <li><a href="Menu.html">Menu</a>
+        <li><a href="index.html">Home Page</a>
+        <li><a href="menu.html">Menu</a>
     </ul>
     
     <img src="171026-better-coffee-boost-se-329p.webp" alt="Banner" width="1405" height="600">
